log/build_2025-08-30_17-58-54/py_pkg/stderr.log
  File "/home/lucas/turtlesim_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/turle_control.py", line 4
    from geometry_msgs import geometry_msgs/msg/Twist
                                           ^
SyntaxError: invalid syntax

